few bug fixes and alignment issues

--- a/src/main/webapp/resources/app/css/main.css
+++ b/src/main/webapp/resources/app/css/main.css
@@ -11,7 +11,7 @@ footer {
     padding: 1rem;
     text-align: center;
 }
-.patient {
+.boxed {
     border:ridge;
     border-color: darkgray;
     margin: 0px 10px 40px 10px;
